TESTING userRegister Works(FINISHED) userLogin works(FINISHED) userLogin refresh_token works, creates a new access token(FINISHED) userFind_Rides route works,(FINISHED) createRide works(FINNISHED) joinRide works(FINISHED) Delete Ride Route(FINISHED) MODIFICATION: When delete ride update role, if user is giving 0 more rides then change them back to passenger Remove Passenger Route(FINISHED) Check if ride complete route(FINISHED) MODIFICATION: Not urgent, but should fix the time_taken part Update Ride Route(FINISHED) Reviews(FINISHED) Create user_Logout to remove refreshtoken and test route NOTES: Only works when youre logged in, unless returns Invalid Token(must login)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,6 +105,10 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+    "outDir": "./dist",  // Directs compiled files to 'dist'
+    "rootDir": "./src",  // Keeps TypeScript source files in 'src'
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
