--- a/package.json
+++ b/package.json
@@ -14,21 +14,27 @@
   "description": "",
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
-    "@types/node": "^22.7.5",
-    "prisma": "^5.21.1",
+    "@types/node": "^22.9.0",
+    "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.21.1",
+    "@clerk/clerk-sdk-node": "^5.0.60",
+    "@clerk/express": "^1.3.9",
+    "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^1.2.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "ts-node-dev": "^2.0.0"
   },
   "dev2Dependencies": {
     "ts-node": "^10.0.0",
